--- a/public/front/adminPage/delete.ejs
+++ b/public/front/adminPage/delete.ejs
@@ -53,7 +53,7 @@
     <div class="container">
         <div class="col-md-7 col-lg-8">
             <h4 class="mb-3">Delete</h4>
-            <form action="/admin/delete" class="needs-validation" novalidate method="POST">
+            <form action="/admin/delete?_method=DELETE" class="needs-validation" novalidate method="POST">
                 <div class="row g-3">
                     <div class="col-sm-6">
                         <label for="email" class="form-label">Email</label>
@@ -72,7 +72,7 @@
                         <% if(type == 'None'){ %>
                             <h5 class="mb-3">This user does not exist</h5>
                         <% } else{ %>
-                            <h5 class="mb-3"><%= type %> <%= name %> successfully deleted!</h5>
+                                <h5 class="mb-3"><%= type %> <%= name %> and <strong>everything</strong> related to them successfully deleted!</h5>
                         <% } %>
                     <% } %>
                 </div>
