--- a/public/front/adminPage/update.ejs
+++ b/public/front/adminPage/update.ejs
@@ -57,7 +57,7 @@
         <% } %>
         <div class="col-md-7 col-lg-8">
             <h4 class="mb-3">Update Seller</h4>
-            <form action="/admin/update" class="needs-validation" method="POST">
+            <form action="/admin/update?_method=PATCH" class="needs-validation" method="POST">
                 <div class="row g-3">
                     <div class="col-sm-6">
                         <!--                        <label for="currEmail" class="form-label">Current Email</label>-->
@@ -115,7 +115,7 @@
             <br>
             <div class="row g-3">
                 <% if(newSeller != null){ %>
-                    <h5 class="mb-3">User '<%= oldSeller %>' successfully updated!</h5>
+                    <h5 class="mb-3">Seller '<%= oldSeller %>' and their products successfully updated!</h5>
                     <table>
                         <tr>
                             <td>Username</td>
