--- a/public/front/sellerPage/createProd.ejs
+++ b/public/front/sellerPage/createProd.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
-    <title>Admin page</title>
+    <title>Seller page</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/headers/">
 
@@ -74,7 +74,7 @@
                         <select name="type">
                             <option value="shoes">Shoes</option>
                             <option value="clothes">Clothes</option>
-                            <option value="acc">Accessories</option>
+                            <option value="accessory">Accessories</option>
                         </select>
                         <div class="invalid-feedback">
                             Valid type is required.
