--- a/public/front/sellerPage/deleteProd.ejs
+++ b/public/front/sellerPage/deleteProd.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
-    <title>Admin page</title>
+    <title>Seller page</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/headers/">
 
@@ -56,7 +56,7 @@
         <% } %>
         <div class="col-md-7 col-lg-8">
             <h4 class="mb-3">Delete your product</h4>
-            <form action="/seller/delete" class="needs-validation" novalidate method="POST">
+            <form action="/seller/delete?_method=DELETE" class="needs-validation" novalidate method="POST">
                 <div class="row g-3">
                     <div class="col-sm-6">
                         <label for="name" class="form-label">Name</label>
