--- a/public/front/sellerPage/readProd.ejs
+++ b/public/front/sellerPage/readProd.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
-    <title>Admin page</title>
+    <title>Seller page</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/headers/">
 
@@ -86,7 +86,7 @@
             <br>
             <div class="row g-3">
                 <% if(prod.length === 0){ %>
-                    <h5 class="mb-3">Nothing to show. Consider <a href="/seller">creating new product</a>?</h5>
+                    <h5 class="mb-3">Nothing to show. Consider <a href="/seller/create">creating new product</a>?</h5>
                 <% } else{ %>
                     <h5 class="mb-3">My products: </h5>
                     <table>
