--- a/public/html_files/access.ejs
+++ b/public/html_files/access.ejs
@@ -6,18 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DAMA</title>
     <link rel="stylesheet" href="../css_files/css2.css">
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
 <body>
 <div class="nav">
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
         <div class="nav-title">
-            DAMA
+            Dama
         </div>
     </div>
     <div class="nav-btn">
@@ -38,12 +42,13 @@
                         <option value="RUB">RUB</option>
                     </select><input type="submit"></form>
             </li>
+            <li><a href="/cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
             <li><a href="/home">Home</a></li>
             <li><a href="/cloth">Clothes</a></li>
             <li><a href="/shoes">Shoes</a></li>
             <li><a href="/accessories">Accessories</a></li>
             <li><a href="/profile">Profile</a></li>
-<!--            <li><a href="/login">Log In</a></li>-->
+            <!--            <li><a href="/login">Log In</a></li>-->
         </ul>
     </div>
 </div>
@@ -56,88 +61,29 @@
     </div>
 </header>
 <section class="shop container">
-    <h2 class="section-title">ACCESSORIES</h2>
-    <div class="shop-content">
-        <div class="product-box">
-            <img src="../Accessory/pandora1.png" alt="" class="product-img">
-            <h2 class="product-title">Pandora Moments Bracelete</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
-            <div class="btn">
-                <a href="#">Create order</a>
-            </div>
-        </div>
+    <h2 class="section-title">Accessories</h2>
+    <% if(prod.length === 0){ %>
+        <h2 class="section-title">Stock empty!</h2>
+    <% } else{ %>
+        <div class="shop-content">
+            <% for(let i = 0;i < prod.length;i++){ %>
+                <form action="/cart" class="needs-validation" method="POST">
+                    <div class="product-box">
+                        <img src="../Accessory/pandora1.png" alt="" class="product-img">
+                        <h2 class="product-title"><%= prod[i].name %></h2>
+                        <span class="price"><%= Math.round(ans) * prod[i].price %> <%= holder %></span>
+                        <span class="author">By <%= prod[i].author %></span>
+                        <br>
+                        <span>Only <%= prod[i].quantity %> left!</span>
 
-        <div class="product-box">
-            <img src="../Accessory/pandora2.png" alt="" class="product-img">
-            <h2 class="product-title">Pandora x StarWars Bracelete</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
-            <div class="btn">
-                <a href="#">Create order</a>
-            </div>
+                        <div class="btn">
+                            <button>Add to cart</button>
+                        </div>
+                    </div>
+                </form>
+            <% } %>
         </div>
-
-        <div class="product-box">
-            <img src="../Accessory/pandora3.png" alt="" class="product-img">
-            <h2 class="product-title">Pandora ME Bracelete</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
-            <div class="btn">
-                <a href="#">Create order</a>
-            </div>
-        </div>
-
-        <div class="product-box">
-            <img src="../Accessory/ring1.png" alt="" class="product-img">
-            <h2 class="product-title">Pandora Ring Tiara</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
-            <div class="btn">
-                <a href="#">Create order</a>
-            </div>
-        </div>
-
-        <div class="product-box">
-            <img src="../Accessory/ring2.png" alt="" class="product-img">
-            <h2 class="product-title">Pandora Ring Sparkling Heart</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
-            <div class="btn">
-                <a href="#">Create order</a>
-            </div>
-        </div>
-
-        <div class="product-box">
-            <img src="../Accessory/ring3.png" alt="" class="product-img">
-            <h2 class="product-title">Pandora Ring LOVE ME</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
-            <div class="btn">
-                <a href="#">Create order</a>
-            </div>
-        </div>
-        <div class="product-box">
-            <img src="../Accessory/Earrings1.png" alt="" class="product-img">
-            <h2 class="product-title">Pandora Earrings Sparkling Heart</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
-            <div class="btn">
-                <a href="#">Create order</a>
-            </div>
-        </div>
-
-        <div class="product-box">
-            <img src="../Accessory/Earrings2.png" alt="" class="product-img">
-            <h2 class="product-title">Pandora Earrings Brilliant Oval</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
-            <div class="btn">
-                <a href="#">Create order</a>
-            </div>
-        </div>
-
-        <div class="product-box">
-            <img src="../Accessory/Earrings3.png" alt="" class="product-img">
-            <h2 class="product-title">Earrings Earrings Golden Snitch, Harry Potter</h2>
-            <span class="price"><%= Math.round(ans)*80 %> <%=holder%></span>
-            <div class="btn">
-                <a href="#">Create order</a>
-            </div>
-        </div>
-    </div>
+    <% } %>
 </section>
 <div class="orderWindow">
     <div class="orderContainer">
@@ -192,7 +138,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-<script src="../js_files/order.js"></script>
+<!--<script src="../js_files/order.js"></script>-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
