--- a/public/html_files/home.ejs
+++ b/public/html_files/home.ejs
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dama</title>
+    <link rel="stylesheet" href="../css_files/mainpagecss.css">
+    <link rel="stylesheet" href="../css_files/navbar.css">
+
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="../css_files/mainpagecss.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="../css_files/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
 <body>
@@ -35,16 +36,17 @@
 
     <div class="nav-links">
         <ul>
-            <li><a>
-                <button id="ASong" onClick="playPause()">
-                    <audio
-                            src="../music/music.mp3"
-                            autoplay
-                            loop
-                    ></audio>
-                    <i class='bx bx-play bx-lg'></i>
-                </button>
-            </a></li>
+<!--            <li><a>-->
+<!--                <button id="ASong" onClick="playPause()">-->
+<!--                    <audio-->
+<!--                            src="../music/music.mp3"-->
+<!--                            autoplay-->
+<!--                            loop-->
+<!--                    ></audio>-->
+<!--                    <i class='bx bx-play bx-lg'></i>-->
+<!--                </button>-->
+<!--            </a></li>-->
+            <li><a href="/cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
             <li><a href="/home">Home</a></li>
             <li><a href="/cloth">Clothes</a></li>
             <li><a href="/shoes">Shoes</a></li>
