--- a/public/html_files/UserAccount.ejs
+++ b/public/html_files/UserAccount.ejs
@@ -4,8 +4,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css_files/profile.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
-    <title>User Account</title>
+    <title>Profile</title>
 </head>
 <body>
 <div class="container">
@@ -16,10 +17,11 @@
                     <div class="card-body">
                         <img src="gray.jpg" class="rounded-circle" width="150" alt="">
                         <div class="mt-3">
-                            <a href="">⠀</a>
+                            <br>
                             <a href="/home">Home</a>
-                            <a href="">Edit</a>
-<!--                            <a href="">Settings</a>-->
+                            <a href="/profile">Profile</a>
+                            <a href="/profile/edit">Edit</a>
+                            <a href="/cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
                             <form action="/logout" method="POST">
                                 <button>Logout</button>
                             </form>
